--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
             const filteredTx = transactions.filter(t => t.description.toLowerCase().includes(searchQuery.toLowerCase()) || t.categoryName.toLowerCase().includes(searchQuery.toLowerCase()));
 
             return (
-                <div className="pb-32 max-w-md mx-auto min-h-screen relative z-10">
+                <div className="pb-32 pt-14 max-w-md mx-auto min-h-screen relative z-10">
                     <div className="sticky top-0 glass-nav p-4 flex justify-between items-center z-50 rounded-b-3xl mx-2 border-b border-glass-100 no-print">
                         <div className="flex items-center gap-2.5 font-bold tracking-tight">
                             <div className="bg-gradient-to-tr from-neon-green to-neon-blue text-black p-2 rounded-xl shadow-[0_0_15px_rgba(0,255,157,0.5)]"><Icon name="wallet" size={20} /></div>
@@ -1504,8 +1504,8 @@
                                     <input type="password" value={geminiKey} onChange={e => { setGeminiKey(e.target.value); localStorage.setItem('gemini_key', e.target.value); }} placeholder="Paste Key..." className="w-full p-4 bg-black/50 border border-glass-200 rounded-xl text-white text-sm mb-4 font-mono focus:border-neon-purple transition-all" />
                                     <label className="text-xs font-bold text-neon-purple uppercase mb-3 block">Model Version</label>
                                     <select value={aiModel} onChange={e => { setAiModel(e.target.value); localStorage.setItem('ai_model', e.target.value); }} className="w-full p-4 bg-black/50 border border-glass-200 rounded-xl text-white text-sm font-bold appearance-none">
-                                        <option value="gemini-3.0-pro-preview">Gemini 3.0 Pro (Preview)</option>
-                                        <option value="gemini-3.0-flash-preview">Gemini 3.0 Flash (Preview)</option>
+                                        <option value="gemini-3-pro-preview">Gemini 3.0 Pro (Preview)</option>
+                                        <option value="gemini-3-flash-preview">Gemini 3.0 Flash (Preview)</option>
                                         <option value="gemini-2.5-pro">Gemini 2.5 Pro</option>
                                         <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
                                         <option value="gemini-2.5-flash-lite">Gemini 2.5 Flash Lite</option>
