--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
             const filteredTx = transactions.filter(t => t.description.toLowerCase().includes(searchQuery.toLowerCase()) || t.categoryName.toLowerCase().includes(searchQuery.toLowerCase()));
 
             return (
-                <div className="pb-32 pt-14 max-w-md mx-auto min-h-screen relative z-10">
+                <div className="pb-32 max-w-md mx-auto min-h-screen relative z-10">
                     <div className="sticky top-0 glass-nav p-4 flex justify-between items-center z-50 rounded-b-3xl mx-2 border-b border-glass-100 no-print">
                         <div className="flex items-center gap-2.5 font-bold tracking-tight">
                             <div className="bg-gradient-to-tr from-neon-green to-neon-blue text-black p-2 rounded-xl shadow-[0_0_15px_rgba(0,255,157,0.5)]"><Icon name="wallet" size={20} /></div>
